[gd_scene load_steps=5 format=2]

[ext_resource path="res://Components/CentralPiece/CentralPiece.tscn" type="PackedScene" id=1]
[ext_resource path="res://Components/Spigolo/Spigolo.tscn" type="PackedScene" id=2]
[ext_resource path="res://Components/Cubo/Cubo.gd" type="Script" id=3]
[ext_resource path="res://Components/Vertice/Vertice.tscn" type="PackedScene" id=4]

[node name="Cubo" type="Spatial"]
script = ExtResource( 3 )

[node name="CentralPieceO" parent="." instance=ExtResource( 1 )]

[node name="SpigoloOG" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0 )

[node name="SpigoloBO" parent="." instance=ExtResource( 2 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -2, 0, 0 )

[node name="SpigoloOY" parent="." instance=ExtResource( 2 )]
transform = Transform( -4.37114e-08, -1, 0, -4.37114e-08, 1.91069e-15, -1, 1, -4.37114e-08, -4.37114e-08, 0, -2, 0 )

[node name="SpigoloWO" parent="." instance=ExtResource( 2 )]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 2, 0 )

[node name="Vertice" parent="." instance=ExtResource( 4 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -2, 2, 0 )
